# slick-slax

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: check.yml  pages.yml  release.yml
docs/: INSTALL-CONTRACT.md  index.html
docs/assets/: site.css
docs/downloads/: SlickSlax_0.1.0_aarch64.dmg
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: drives.rs  install.rs  lib.rs  main.rs  model.rs
src/components/: Brand.tsx  StepRail.tsx
src/lib/: bridge.ts  format.test.ts  format.ts
